--- a/AboutUs.html
+++ b/AboutUs.html
@@ -136,7 +136,7 @@
         <p class="text-center mb-3" style="font-size: 150%;"><strong>VISION</strong></p>
 
         <p class="text-center mb-3" align="justify">
-            <img src="http://cms.sinhgad.edu/media/447869/vision_269x23.jpg" width="" height="" alt="vision">
+            <img src="vision.jpg" width="" height="" alt="vision">
         </p>
 
         <p class="text-center mb-3">We are committed to producing not only good engineers but good human beings,
@@ -157,7 +157,7 @@
         <p class="text-center mb-3" style="font-size: 150%;"><strong>ABOUT US</strong></p>
 
         <p class="text-center mb-3">
-            <img src="http://cms.sinhgad.edu/media/447884/college%20image_13145x5000.jpg" width="930" height="354"
+            <img src="au.jpg" width="930" height="354"
                 alt="college Image">
         </p>
 
