--- a/Courses.html
+++ b/Courses.html
@@ -61,7 +61,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="http://sinhgad.edu/si-theme-default/assets/si-logo.png" alt="College Logo" height="60">
+            <img src="logo.png" alt="College Logo" height="60">
             Sinhgad Institutes | Empowering Academic Excellence
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
