--- a/Home.html
+++ b/Home.html
@@ -103,7 +103,7 @@
         <!-- <div class="col-md-6"> -->
             <div class="col-md-6 col-sm-12 mb-4">
             <div class="card">
-                <img src="http://sinhgad.edu/2021/STES_Racing_team_pic.jpg" class="card-img-top" alt="Blog 1">
+                <img src="racing_team.jpg" class="card-img-top" alt="Blog 1">
                 <div class="card-body">
                     <h5 class="card-title">SINHGAD INSTITUE RACING TEAM</h5>
                     <p class="card-text">STES Racing Team of Sinhgad Institutes ranks 4th in Overall perfomance at Formula Bharat 21-22.</p>
@@ -112,7 +112,7 @@
         </div>
         <div class="col-md-6">
             <div class="card">
-                <img src="http://sinhgad.edu/2021/MOUS.png" height="295px" class="card-img-top" alt="Blog 2">
+                <img src="mou.png" height="295px" class="card-img-top" alt="Blog 2">
                 <div class="card-body">
                     <h5 class="card-title">MOU SIGNED WITH MHEL PUNE BY NBNSCOE</h5>
                     <p class="card-text">Sinhgad Institutes signs MOU with Mahindra Heavy Engines Limited PUne.</p>
@@ -123,7 +123,7 @@
     <div class="row mt-4">
         <div class="col-md-6">
             <div class="card">
-                <img src="http://sinhgad.edu/2021/IMG-20211123-WA0065.jpg" height="295px" class="card-img-top" alt="Blog 3">
+                <img src="cyber.jpg" height="295px" class="card-img-top" alt="Blog 3">
                 <div class="card-body">
                     <h5 class="card-title">CYBER SECURITY PROGRAM BY SINHGAD INSTITUTES</h5>
                     <p class="card-text"> Cyber Security program by Sinhgad Institutes with Pune Cyber Police.</p>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-md-6">
             <div class="card">
-                <img src="http://sinhgad.edu/2021/SVCP_Patent_team.jpg" height="295px" class="card-img-top" alt="Blog 4">
+                <img src="patent.jpg" height="295px" class="card-img-top" alt="Blog 4">
                 <div class="card-body">
                     <h5 class="card-title">ACHIEVEMENT</h5>
                     <p class="card-text">Patent granted to Sinhgad Institutes Project to electric power from speed breakers.</p>
