--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 window.location.href = "Home.html"; // Change to your actual index page
             } else {
                 // Display error message
-                errorElement.textContent = "Invalid username or password";
+                alert("Invalid username or password");
             }
         }
         </script>
